# shared-skills-registry-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  registry.example.yaml
.agent/: GOALS.md
.agent/runs/2026-07-09-stdio-release-hardening/: GOAL.md  implementation-notes.html
.agent/runs/2026-07-10-gate-3-human-readiness/: GOAL.md  implementation-notes.html
.agent/runs/2026-07-10-gate-3-public-readiness/: GOAL.md  implementation-notes.html
.agent/runs/2026-07-10-v0.1.0a1-github-prerelease/: GOAL.md  implementation-notes.html
.github/workflows/: ci.yml  release.yml
apps/api/: README.md
apps/web/: README.md
client/: stdio_server.py
config/: shared_skills.yaml
docs/: DEMO-SCRIPT.md  KNOWN-LIMITATIONS.md  LAUNCH-POST.md  MCP-CLIENT-CONFIG.md  PRIVATE-MCP-REFERENCE.md  PRODUCT-PROMISE.md  RELEASE-CHECKLIST.md  SECURITY-BOUNDARY.md  SEED-CATALOG.md  TASK-BOARD.md  THREAT-MODEL.md
docs/memory/: README.md  project-memory.md
docs/memory/2026-07-09/: canonical-skills-directory-correction-memory-2026-07-09.md  open-ssr-gate-2-closeout-memory-2026-07-09.md  open-ssr-seed-catalog-memory-2026-07-09.md  real-mcp-stdio-release-hardening-memory-2026-07-09.md
docs/memory/2026-07-10/: open-ssr-gate-3-human-readiness-memory-2026-07-10.md  open-ssr-gate-3-public-readiness-memory-2026-07-10.md  open-ssr-launch-handoff-memory-2026-07-10.md  open-ssr-v0.1.0a1-github-prerelease-memory-2026-07-10.md
docs/releases/: v0.1.0a1.md  v0.1.0a2.md
examples/mcp-client-config/: hermes-add-shared-skills-registry.sh  shared-skills-registry.mcp.json
examples/skills/: README.md
examples/skills/demo-research-brief/: SKILL.md
examples/skills/demo-research-brief/templates/: brief.md
requirements/: ci-constraints.txt
scripts/: mcp_stdio_smoke.py
seed/skills/project-memory/references/agent-metadata/: openai.yaml
seed/skills/website-copywriting/references/: website-copywriting-research-report.md
seed/skills/website-copywriting/templates/: homepage-copy-brief.md
skills/project-memory/: SKILL.md
skills/project-memory/references/: launch-checklist.md  upstream-source.md
skills/project-memory/references/examples/: agent-workspace-memory.md  design-pass-memory.md  saas-product-memory.md
skills/project-memory/templates/: memory-template.md
skills/shared-skills-registry-access/: SKILL.md
skills/website-copywriting/: SKILL.md
skills/website-copywriting/references/: principle-ledger.md  source-map.md
skills/website-copywriting/templates/: copy-teardown-template.md  landing-page-copy-review.md  offer-and-objection-map.md
src/shared_skills_registry_mcp/: __init__.py  app.py  audit.py  cli.py  config.py  registry_edit.py  runtime_paths.py  shared_skills.py  stdio_server.py
tests/: test_app.py  test_audit.py  test_auth.py  test_cli.py  test_guardrails.py  test_mcp_stdio_e2e.py  test_registry_edit.py  test_release_readiness_docs.py  test_shared_skills.py
ui/: index.html
