[project]
name = "shared-skills-registry-mcp"
version = "0.1.0"
description = "Self-hosted Shared Skills Registry MCP server for reusable AI-agent skills"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "PyYAML>=6",
  "mcp>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
