[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "shared-skills-registry-mcp"
version = "0.1.0"
description = "A self-hosted registry and MCP server for reusable AI-agent skills"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
authors = [{ name = "cobibean" }]
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "PyYAML>=6.0,<7",
  "mcp>=1.26,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<2",
]

[project.scripts]
shared-skills-registry-http = "shared_skills_registry_mcp.cli:main"
shared-skills-registry-stdio = "shared_skills_registry_mcp.stdio_server:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_skills_registry_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "shared_skills_registry_mcp/_bundled/config"
"skills" = "shared_skills_registry_mcp/_bundled/skills"
"examples/skills" = "shared_skills_registry_mcp/_bundled/examples/skills"
"ui" = "shared_skills_registry_mcp/_bundled/ui"
